@@ -6,20 +6,18 @@ import com.stitch.grocerly.reprository.ProductEntity;
 import com.stitch.grocerly.reprository.ProductRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
-import java.util.stream.Collectors;
+
 import java.util.List;
 
 @Service
 @RequiredArgsConstructor
 public class ProductService {
     private final ProductRepository productRepository;
-
     private final ProductMapper productMapper;
 
-
-
-    public ProductResponseDto getProduct(Integer id){
-        ProductEntity productEntity = productRepository.findById(id).get();
+    public ProductResponseDto getProduct(Integer id) {
+        ProductEntity productEntity = productRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Product not found: " + id));
         return productMapper.mapToDto(productEntity);
     }
 
@@ -27,8 +25,6 @@ public class ProductService {
         return productRepository.findAll()
                 .stream()
                 .map(productMapper::mapToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
-
-
 }
